--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -10,4 +10,4 @@
 @import './pages/googleMap';
 @import './pages/travel';
 @import './pages/priceInfo';
-@import './pages/mobileTravelDetail';
+@import './pages/travelDetail';
