--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -1,6 +1,6 @@
 header{
   background: linear-gradient(90deg, rgba(77, 77, 77, 0.6) 0%, rgba(77, 77, 77, 0.4) 100%),
-              url('@/assets/images/headerBg.png');
+              url('@/assets/images/澎湖灣1.png');
   background-position: center center;
   background-size: cover;
   border-radius: 0 0 60px 60px;
